[package]
name = "ovn-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ovsdb = {version = "0.0.7", path = "../ovsdb"}
serde = { version = "*", features = ["derive"] }
serde_json = {version = "*"}
[build-dependencies]
ovsdb-build ={ version = "0.0.7", path = "../ovsdb-build"}